Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17851

Assertion failure srv_undo_tablespaces > 1

    XMLWordPrintable

Details

    Description

      If InnoDB is set up with innodb_undo_tablespaces=2 and later restarted with innodb_undo_tablespaces=0, a debug assertion can fail in trx_assign_rseg_low() when a transaction is about to write undo log.

      Instead of letting the assertion fail when innodb_undo_tablespaces=0, we should simply skip rollback segments that are outside the system tablespace.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.