MDEV-17851 Assertion failure srv_undo_tablespaces > 1

trx_assign_rseg_low(): Skip dedicated undo tablespaces if
innodb_undo_tablespaces=0 has been set after the database was created.